# game_test

./: CMakeLists.txt  README.md  game.sh
src/: Communicator.h  PipeCommunicator.cpp  PipeCommunicator.h  Player.h  ProcessPlayer.cpp  ProcessPlayer.h  QueueCommunicator.cpp  QueueCommunicator.h  ThreadPlayer.cpp  ThreadPlayer.h  main.cpp
